Fixed #3, added scrollbar width compensation to avoid content moving when modal overlay is displayed

--- a/the-modal.css
+++ b/the-modal.css
@@ -1,4 +1,4 @@
-.lock {
+.themodal-lock {
 	/* when modal is opened we're removing scrollbars from the main content */
 	overflow: hidden;
 }
